crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__constructor__field_1_0_escape_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let subject#1 : @constr[0](int) = constr 0 0 in
let subject#2 : @constr[0](int) = subject#1 in
constr 0 (field@0/1 subject#2) (field@0/1 subject#2) subject#1
--- unoptimized UPLC
(program 1.1.0
  [(lam subject_1
    [(lam subject_2
      (constr 0
        (case subject_2 (lam generated_3 generated_3))
        (case subject_2 (lam generated_4 generated_4))
        subject_1))
      subject_1])
    (constr 0 (con integer 0))])
--- optimized Core
let subject#3 : @constr[0](int) = constr 0 0 in
constr 0 0 0 subject#3
--- optimized UPLC
(program 1.1.0
  [(lam subject_1 (constr 0 (con integer 0) (con integer 0) subject_1))
    (constr 0 (con integer 0))])
--- isolated pass
--- isolated ANF input
let subject#1 : @constr[0](int) = constr 0 0 in
let subject#2 : @constr[0](int) = subject#1 in
let anf#3 : int = field@0/1 subject#2 in
let anf#4 : int = field@0/1 subject#2 in
constr 0 anf#3 anf#4 subject#1
--- isolated folded Core
let field#5 : int = 0 in
let subject#1 : @constr[0](int) = constr 0 field#5 in
let subject#2 : @constr[0](int) = subject#1 in
let anf#3 : int = field#5 in
let anf#4 : int = field#5 in
constr 0 anf#3 anf#4 subject#1
--- isolated cleaned Core
let subject#1 : @constr[0](int) = constr 0 0 in
constr 0 0 0 subject#1
--- isolated UPLC before
(program 1.1.0
  [(lam subject_1
    [(lam subject_2
      [(lam anf_3
        [(lam anf_4 (constr 0 anf_3 anf_4 subject_1))
          (case subject_2 (lam generated_5 generated_5))])
        (case subject_2 (lam generated_6 generated_6))])
      subject_1])
    (constr 0 (con integer 0))])
--- isolated UPLC after
(program 1.1.0
  [(lam subject_1 (constr 0 (con integer 0) (con integer 0) subject_1))
    (constr 0 (con integer 0))])
--- result
(constr 0 (con integer 0) (con integer 0) (constr 0 (con integer 0)))
--- logs
[]
